--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.1 | ^7.2 | ^7.3",
+        "php": "^7.1 || ^7.2 || ^7.3",
         "phpstan/phpstan": "dev-master as 0.12.0"
     },
     "autoload": {
