--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.1 || ^7.2 || ^7.3",
-        "phpstan/phpstan": "dev-master as 0.12.0"
+        "phpstan/phpstan": "^0.12.0"
     },
     "autoload": {
         "psr-4": {
